[tool.poetry]
name = "osustreams"
version = "1.0.0"
description = "find stream maps in your osu library"
authors = ["upgradeq <noreply@example.com>"]
readme = "README.md"
include = ["LICENCE"]
license = "MPL-2.0"
keywords = ["osu","stream","export","beatmap","search"]
homepage = "https://github.com/upgradeQ/OSU-STREAM-DETECTOR"
repository = "https://github.com/upgradeQ/OSU-STREAM-DETECTOR"
documentation = "https://github.com/upgradeQ/OSU-STREAM-DETECTOR/blob/master/README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]


packages = [
    { include = "is_it_stream.py" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
osustreams = "is_it_stream:main"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
